# google-marketing-mcp

./: .gitignore  README.md  setup.sh
servers/ga4-admin-mcp/: README.md  pyproject.toml
servers/ga4-admin-mcp/ga4_admin_mcp/: __init__.py  coordinator.py  server.py
servers/ga4-admin-mcp/ga4_admin_mcp/tools/: admin.py  client.py  utils.py
servers/tagmanager-mcp/: README.md  pyproject.toml
servers/tagmanager-mcp/tagmanager_mcp/: __init__.py  coordinator.py  server.py
servers/tagmanager-mcp/tagmanager_mcp/tools/: __init__.py  client.py  read.py  utils.py  write.py
servers/tagmanager-mcp/tests/: test_utils.py
